# htmlmin

./: .coverage  .gitignore  .travis.yml  README.md  README.rst  bandit.toml  junit.xml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  publish.yml  release.yml
docs/: conf.py
github_patches/workflows/: ci.patch.yaml
src/htmlmin/: __init__.py  command.py  decorator.py  escape.py  main.py  middleware.py  parser.py
src/htmlmin/python3html/: __init__.py  parser.py
tests/: large_test.html  test_command.py  test_decorator.py  test_escape.py  test_others.py  test_parser.py
