[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Project information
[project]
dependencies = [
    "ruff>=0.9.9",
    "pyright>=1.1.396",
    "pip-tools>=7.4.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.1.0",
    "bandit>=1.8.3",
    "setuptools",
    "ipdb"
    # add dependencies here
]
name = "htmlmin"
version = "0.2.12"
readme = "README.md"
requires-python = ">=3.13"

# coverage config
[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 70

# linting config
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]

venv = "venv"
venvPath = "."

executionEnvironments = [
    { root = "src" },
    { root = "tests", extraPaths = [
        "src",
    ] },
]
